--- a/about.html
+++ b/about.html
@@ -62,31 +62,17 @@
           <h2>Front-end developer entusiast | Architect
           </h2>
           <p>
-            Hey, 👋 I am Brisa, Master Architect in Sustainable Architecture and Front-end developer, enthusiast (self-thought).
-            Born and raised São Paulo countryside in Brazil. Growing up I always enjoyed using my imagination and creativity, it was clear to me that my flow was in design and create.
+            Hey, 👋 I am Brisa, Master Architect in Sustainable Architecture and Front-end developer, enthusiast (self-thought). Born and raised in the São Paulo countryside in Brazil. Growing up I always enjoyed using my imagination and creativity, it was clear to me that my flow was in design and creation.
             <br />
-            In 2009 I moved to São Paulo to study 5-year bachelor’s degree in Architecture and Urbanism. During that period I worked
-            as an intern during the daytime and studied at University in the evenings and projects and homework on the weekends. It
-            was a challenging period. In the beginning, we had to present the project technical drawings by hand, and well if they
-            were not great, we had to start again🤦‍♀️. Making mock-ups was also time-consuming, but it was great fun!🥰 I was so
-            thankful when we could finally use computers, AutoCAD and SketchUp to design our projects.
+            In 2009 I moved to São Paulo to study for a 5-year bachelor’s degree in Architecture and Urbanism. I graduated in 2014, moved to Norway, and it was then when I saw real snow for the first time ☃ in my life, magic! Then I focused on adapting to culture and language.
             <br />
-            I graduated in 2014 and moved to Norway, and it was when I saw real snow for the first time ☃ in my life, magic! 
-            I then began to settle down and learn the Norwegian language and our cultural contrast.
+            In 2016, I enrolled in an international 2-year master’s degree in Sustainable Architecture, at NTNU, where I got a chance to work with classmates from various parts of the globe, a great teamwork experience. There we learn about how to improve architectural design to reduce environmental impact with the help of a variety of project simulator software and LCA calculations. Meanwhile, I got pregnant and my firstborn was my companion during the last year of the Masters.
             <br />
-            I 2016, I enrolled in an international 2-year master’s degree in Sustainable Architecture, at NTNU, where I got a chance
-            to work with classmates from various parts of the globe, a great teamwork experience. There we learn loots about how to
-            improve architectural design to reduce environmental impact with the help of a variety of project simulator software.
-            Meanwhile, I got pregnant and my firstborn was my companion during the last year of the Masters.
+            My first work experience in Norway was in an architecture office, where I learned to use Lumion, ArchiCAD, BIM. By the end of 2019, my second child was born to complete our family🤗. My work contract came to an end and I was home with my newborn for some months till he began kindergarten.
             <br />
-            My first work experience in Norway was in an architecture office, where I learn Lumion, ArchiCAD, BIM, and deeper
-            interaction with Norwegian building regulation. By the end of 2019, my second child was born to complete our family🤗.
-            My work contract came to an end and I was home with my newborn for some months till he began kindergarten.
+            Then the pandemic time came and the market was even more competitive. I started to learn how to code and in less than a month I managed to create this webpage from scratch 👩‍💻.
             <br />
-            Then the pandemic time came and the market was even more competitive. I then came across an interesting coding program
-            called SheCodes, where I identified my interests and decided to enroll and begin my codding journey. Right from the
-            start, I had fun while coding. In almost a month of learning how to code I managed to create this webpage
-            from scratch 👩‍💻. My biggest wish is to help to improve people’s lives with my work 😀.
+            In 2021 I was hired as an Architect in a Norwegian company, where I’ve been working since. There I’ve learned about building houses in Norway, from the technical drawings to be approved by legislation, building requirements and standards, as well as managing my own projects. Used Revit extensively but also learned many other computer programs, and came to realize that I learn it fast. My biggest wish is to help to improve people’s lives with my work 😀.
 
           </p>
           
