--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="container">
   <div class="row align-items-center">
     <div class="col">
-      <h2><a class="nav-link" href="/codeproj.html" title="architect-portifolio">Front-end developer entusiast</a>
+      <h2><a class="nav-link" href="/codeproj.html" title="architect-portifolio">Front-end developer</a>
       </h2>
     </div>
     <div class="col">
@@ -64,7 +64,7 @@
   </div>
   <div class="row text-center align-items-center">
     <div class="col">
-      <p>Self-taught front-end developer </p>
+      <p>Enthusiast</p>
     </div>
     <div class="col">
       <p>Master of Science in Sustainable Architecture</p>
