--- a/architecture.html
+++ b/architecture.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description"
-    content="Brisa Bøhle is a front-end developer based in Norway, check out her projects and contact her for job inquiries">
+    content="Brisa Silva is a front-end developer based in Norway, check out her projects and contact her for job inquiries">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@1&family=Bellefair&family=Belleza&display=swap"
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Architect - Brisa Bøhle</title>
+  <title>Architect - Brisa Silva</title>
 </head>
 
 <body>
@@ -106,15 +106,15 @@
  </div>
   <nav class="navbar fixed-bottom navbar-light bg-light mt-5">
     <div class="container d-flex justify-content-center">
-      <a class="navbar-brand" href="https://www.linkedin.com/in/brisabøhle" target="_blank">
+      <a class="navbar-brand" href="https://www.linkedin.com/in/brisasilva" target="_blank">
         <i class="fab fa-linkedin" title="linked-in" width="30" height="24"></i>
       </a>
-      <a class="navbar-brand" href="mailto:brisa_bohle@gmail.com" target="_blank">
+      <a class="navbar-brand" href="mailto:brisa.olisilva@gmail.com" target="_blank">
         <i class="fas fa-envelope" title="email-adress" width="30" height="24"></i>
       </a>
       <a class="navbar-brand" href="https://github.com/BrisaBohle/Front-end-Portifolio" target="_blank">
         <i class="fab fa-github-square" title="github-link" width="30" height="24"></i>
-      </a> <span>Open-source code, by Brisa Bøhle</span>
+      </a> <span>Open-source code, by Brisa Silva</span>
 
     </div>
 
