--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Brisa Bøhle is a front-end developer based in Norway, check out her projects and contact her for job inquiries">
+    content="Brisa Silva is a front-end developer based in Norway, check out her projects and contact her for job inquiries">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=ABeeZee:ital@1&family=Bellefair&family=Belleza&display=swap"
     rel="stylesheet">
@@ -14,7 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" href="/src/styles.css">
-  <title>Contact me - Brisa Bøhle</title>
+  <title>Contact me - Brisa Silva</title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
   
   <div class="container">
     <hr />
-    <h1>BRISA BØHLE</h1>
+    <h1>BRISA SILVA</h1>
     <hr />
     <div class="row justify-content-center">
       <div class="col-md-6">
@@ -70,15 +70,15 @@
               Email
             </h3>
             <i class="fas fa-envelope contact-icon" title="email-adress"></i>
-            <small>brisa.bohle@gmail.com</small>
+            <small>brisa.olisilva@gmail.com</small>
           </li>
           <li class="contact-list">
             <h3>
               LinkedIn
             </h3>
             <i class="fas fa-envelope contact-icon" title="email-adress"></i>
-            <small><a href="https://www.linkedin.com/in/brisabøhle" target="_blank">
-                www.linkedin.com/in/brisabøhle
+            <small><a href="https://www.linkedin.com/in/brisasilva" target="_blank">
+                www.linkedin.com/in/brisasilva
               </a></small>
           </li>
         </ul>
@@ -88,15 +88,15 @@
 </div>
   <nav class="navbar fixed-bottom navbar-light bg-light">
     <div class="container d-flex justify-content-center">
-      <a class="navbar-brand" href="https://www.linkedin.com/in/brisabøhle" target="_blank">
+      <a class="navbar-brand" href="https://www.linkedin.com/in/brisasilva" target="_blank">
         <i class="fab fa-linkedin" title="linked-in" width="30" height="24"></i>
       </a>
-      <a class="navbar-brand" href="mailto:brisa_bohle@gmail.com" target="_blank">
+      <a class="navbar-brand" href="mailto:brisa.olisilva@gmail.com" target="_blank">
         <i class="fas fa-envelope" title="email-adress" width="30" height="24"></i>
       </a>
       <a class="navbar-brand" href="https://github.com/BrisaBohle/Front-end-Portifolio" target="_blank">
         <i class="fab fa-github-square" title="github-link" width="30" height="24"></i>
-      </a> <span>Open-source code, by Brisa Bøhle</span>
+      </a> <span>Open-source code, by Brisa Silva</span>
     </div>
   </nav>
 
